--- a/views/stats.slim
+++ b/views/stats.slim
@@ -1,9 +1,21 @@
 doctype 5
 html
   head
+    meta charset="utf8"
     title Lettersmashr Stats
-    script type='text/javascript' src='http://code.jquery.com/jquery-2.0.2.min.js'
-    script type='text/javascript' src='javascript/lettersmashr.js'
+    meta name="viewport" content="width=device-width, initial-scale=1.0"
+
+    /! Loading Bootstrap
+    link href="bootstrap/css/bootstrap.css" rel="stylesheet"
+
+    /! Loading Flat UI
+    link href="css/flat-ui.css" rel="stylesheet"
+
+    link rel="shortcut icon" href="images/favicon.ico"
+
+    /! HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file.
+    /[if lt IE 9]
+      script src="js/html5shiv.js"
 
   body
     h1 Lettersmashr Statistics
@@ -88,3 +100,5 @@ html
       tr
         th z
         td #{zLetterPhotoCount}
+
+
